--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,81 +1,76 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import Card from '../components/Card.astro';
+import Layout from "../layouts/Layout.astro";
+
+const demos = new Map([
+	["HeatMap", "/heatmap/"],
+	["Markers", "/markers/"],
+	["Kisses", "/kissingbooth/"],
+	["Sequence", "/sequence/"],
+	["Baby", "/baby/"],
+	["Paint", "/paint/"],
+	["Vote", "/vote/"],
+	["Tomatoes", "/tomatoes/"],
+]);
 ---
 
-<Layout title="Welcome to Astro.">
-	<main>
-		<h1>Welcome to <span class="text-gradient">Astro</span></h1>
-		<p class="instructions">
-			To get started, open the directory <code>src/pages</code> in your project.<br />
-			<strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message above.
-		</p>
-		<ul role="list" class="link-card-grid">
-			<Card
-				href="https://docs.astro.build/"
-				title="Documentation"
-				body="Learn how Astro works and explore the official API docs."
-			/>
-			<Card
-				href="https://astro.build/integrations/"
-				title="Integrations"
-				body="Supercharge your project with new frameworks and libraries."
-			/>
-			<Card
-				href="https://astro.build/themes/"
-				title="Themes"
-				body="Explore a galaxy of community-built starter themes."
-			/>
-			<Card
-				href="https://astro.build/chat/"
-				title="Community"
-				body="Come say hi to our amazing Discord community. ❤️"
-			/>
-		</ul>
-	</main>
+<Layout title="Home">
+	<div class="flex flex-col justify-center items-center h-full">
+		<a href="/"><img src="/images/heat.svg" width="360" height="128" /></a>
+
+		<div
+			class="flex flex-wrap justify-center text-white gap-2 my-8 uppercase w-full max-w-md"
+		>
+			{
+				[...demos].map(([key, value]) => (
+					<a
+						class="demo p-2 rounded border border-white block hover:bg-white/50"
+						href={value}
+					>
+						{key}
+					</a>
+				))
+			}
+		</div>
+		<div class="text-xs font-light uppercase text-white/50">
+			&copy; <a href="https://scottmadethis.net">Scott Garner</a> &bull;
+			<a href="/about">About</a> &bull;
+			<a href="/help">Help</a> &bull;
+			<a href="/status">Status</a>
+		</div>
+	</div>
 </Layout>
 
-<style>
-	main {
-		margin: auto;
-		padding: 1.5rem;
-		max-width: 60ch;
-	}
-	h1 {
-		font-size: 3rem;
-		font-weight: 800;
-		margin: 0;
-	}
-	.text-gradient {
-		background-image: var(--accent-gradient);
-		-webkit-background-clip: text;
-		-webkit-text-fill-color: transparent;
-		background-size: 400%;
-		background-position: 0%;
-	}
-	.instructions {
-		line-height: 1.6;
-		margin: 1rem 0;
-		border: 1px solid rgba(var(--accent), 25%);
-		background-color: white;
-		padding: 1rem;
-		border-radius: 0.4rem;
-	}
-	.instructions code {
-		font-size: 0.875em;
-		font-weight: bold;
-		background: rgba(var(--accent), 12%);
-		color: rgb(var(--accent));
-		border-radius: 4px;
-		padding: 0.3em 0.45em;
-	}
-	.instructions strong {
-		color: rgb(var(--accent));
-	}
-	.link-card-grid {
-		display: grid;
-		grid-template-columns: repeat(auto-fit, minmax(24ch, 1fr));
-		gap: 1rem;
-		padding: 0;
+<style is:global>
+	.btn-container {
+		position: absolute;
+		bottom: 1em;
+		left: 1em;
 	}
 </style>
+
+<script is:inline>
+	(function () {
+		const params = new URL(location.href).searchParams;
+		const channel =
+			params.get("channel") ||
+			params.get("channelId") ||
+			params.get("channelID") ||
+			97032862;
+
+		let demoElements = document.getElementsByClassName("demo");
+		for (let demoElement of demoElements) {
+			let href = demoElement.getAttribute("href");
+			href += "?channel=" + channel;
+			demoElement.setAttribute("href", href);
+		}
+	})();
+</script>
+
+<script
+	type="text/javascript"
+	src="https://storage.ko-fi.com/cdn/widget/Widget_2.js"
+></script>
+<script is:inline type="text/javascript">
+	kofiwidget2.init("Support Me on Ko-fi", "#0ab89d", "H2H0I5NI8");
+	kofiwidget2.draw();
+</script>
