--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,3 +1,7 @@
+---
+import { Icon } from "astro-icon";
+---
+
 <header
     class="my-4 text-center flex flex-row justify-between items-center w-full"
 >
