Tweaks rename status.

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -41,7 +41,7 @@ import { Icon } from "astro-icon";
         &copy; <a href="https://scottmadethis.net">Scott Garner</a> &bull;
         <a class="hover:text-white" href="/about">About</a> &bull;
         <a class="hover:text-white" href="/help">Help</a> &bull;
-        <a class="hover:text-white" href="/status">Status</a> &bull;
+        <a class="hover:text-white" href="/live">Live</a> &bull;
         <a class="hover:text-white" href="/terms">Terms</a>
     </div>
 </footer>
