--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -9,6 +9,6 @@ import { Icon } from "astro-icon";
     <div class="text-xs font-light uppercase text-white pt-4">
         <a href="/about">About</a> &bull;
         <a href="/help">Help</a> &bull;
-        <a href="/status">Status</a>
+        <a href="/live">Live</a>
     </div>
 </header>
