--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,28 +17,32 @@ const demos = new Map([
 
 <Layout title="Home">
 	<div
-		class="flex flex-col justify-center items-center h-full w-full max-w-md m-auto px-2"
+		class="tracking-wide flex flex-col justify-center items-center h-full w-full max-w-md m-auto px-2"
 	>
 		<a href="/"><img src="/images/heat.svg" width="360" height="128" /></a>
 
-		<div class="mt-6 mb-6 w-full flex justify-items-stretch gap-2">
+		<div class="mt-8 mb-4 w-full flex justify-items-stretch gap-2">
 			<a
-				class="transition duration-300 border-2 border-orange-400 text-orange-400 font-semibold hover:bg-orange-400 hover:text-white hover:border-white rounded py-2 px-4 w-full block text-center"
-				href="/about">About</a
+				class="transition duration-300 border-2 border-orange-400 text-orange-400 font-semibold hover:bg-orange-400 hover:text-white hover:border-orange-500 rounded py-2 px-4 w-full block text-center text-sm"
+				href="/about">About Heat</a
 			>
 			<a
-				class="transition duration-300 border-2 border-orange-400 text-orange-400 font-semibold hover:bg-orange-400 hover:text-white hover:border-white rounded py-2 px-4 w-full block text-center"
+				class="transition duration-300 border-2 border-orange-400 text-orange-400 font-semibold hover:bg-orange-400 hover:text-white hover:border-orange-500 rounded py-2 px-4 w-full block text-center text-sm"
 				href="/help">Help</a
+			>
+			<a
+				class="transition duration-300 border-2 border-orange-400 text-orange-400 font-semibold hover:bg-orange-400 hover:text-white hover:border-orange-500 rounded py-2 px-4 w-full block text-center text-sm"
+				href="/live">Who's Live?</a
 			>
 		</div>
 
 		<div
-			class="grid grid-cols-4 justify-center justify-items-stretch text-white gap-2 mb-6 w-full"
+			class="grid grid-cols-4 justify-center justify-items-stretch text-white gap-2 mb-8 w-full"
 		>
 			{
 				[...demos].map(([key, value]) => (
 					<a
-						class="transition duration-300 demo p-2 rounded border-2 border-white block hover:bg-white/50 text-center"
+						class="transition duration-300 demo p-2 rounded border-2 border-white block hover:bg-white/50 text-center text-sm"
 						href={value}
 					>
 						{key}
@@ -86,7 +90,7 @@ const demos = new Map([
 			&copy; <a href="https://scottmadethis.net">Scott Garner</a> &bull;
 			<a class="hover:text-white" href="/about">About</a> &bull;
 			<a class="hover:text-white" href="/help">Help</a> &bull;
-			<a class="hover:text-white" href="/status">Status</a> &bull;
+			<a class="hover:text-white" href="/live">Live</a> &bull;
 			<a class="hover:text-white" href="/terms">Terms</a>
 		</div>
 	</div>
