Minor styling tweaks.

--- a/src/layouts/Info.astro
+++ b/src/layouts/Info.astro
@@ -8,7 +8,7 @@ const { title } = Astro.props.frontmatter || Astro.props;
 
 <Layout title={title}>
     <div
-        class="flex flex-col items-center justify-center w-3/4 max-w-3xl m-auto"
+        class="flex flex-col items-center justify-center w-3/4 max-w-xl m-auto"
     >
         <Header />
         <div class="info bg-white rounded p-6">
